--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -1,5 +1,23 @@
+[core]
+	editor = nvim
 [init]
 	defaultBranch = main
 [user]
 	name = Konstantin Althaus
 	email = althaus.konstantin.95@gmail.com
+[alias]
+	loog = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)' --all
+
+[core]
+    pager = delta
+
+[interactive]
+    diffFilter = delta --color-only
+
+[delta]
+    navigate = true
+[merge]
+    conflictstyle = diff3
+
+[diff]
+    colorMoved = default
